tests/golden/fixtures/syntax-const-expr-mult-err/expected.err
Error: duplicate global symbol 'BAR'
   ╭─[ tests/golden/fixtures/syntax-const-expr-mult-err/input.20-const.k65:1:1 ]
   │
 1 │ const BAR = 84
   │ ───────┬──────  
   │        ╰──────── duplicate definition
   │
   ├─[ tests/golden/fixtures/syntax-const-expr-mult-err/input.10-main.k65:2:1 ]
   │
 2 │ const BAR = FOO * 2
   │ ─────────┬─────────  
   │          ╰─────────── first defined here
───╯
